# obs-stabilizer

./: .gitignore  AGENTS.md  CI_CD_COMPREHENSIVE_STATUS_REPORT.md  CLAUDE.md  CMakeLists-minimal.txt  CMakeLists.txt  CMakeLists_opencv.txt  CMakePresets.json  CONTRIBUTING.md  GEMINI.md  IMPLEMENTATION_GUIDE.md  Info-minimal.plist.in  Info.plist.in  POTENTIAL_ISSUES.md  README.md  STATE.md  STATUS.md  TECHNICAL_DEBT_ANALYSIS_REPORT.md  build-plugin.sh  build_opencv_plugin.sh  buildspec.json  ccsandbox.sh  csv  integration-test.cpp  opencv-compatibility-results.md  permissive-open.sb  rloop.sh  run-perftest.sh  run-tests.sh  run_auto_fix.sh  run_dual_opencode.sh  run_interactive_fix.sh  test-compile.cpp  test-compile.sh  test-core-only.cpp  test-core-only.sh  test-results.xml  test-ui-implementation.cpp  test_filter_functionality.md  test_results.xml  (+1 more)
.claude/: workflow.json
.github/: PULL_REQUEST_TEMPLATE.md
.serena/: project.yml
archives/: build_safe_plugin.sh  build_step1_plugin.sh  minimal_noop.cpp  minimal_plugin_main.cpp  run_simple_dual.sh  stabilizer_filter.cpp  test.sh  watch-dog.sh
build-test/: CMakeCache.txt
cmake/: BundledOpenCV.cmake  Info.plist.in  StaticOpenCV.cmake  macOS-plugin-fix.cmake  verify-bundled-libs.sh.in
docs/: ARCHITECTURE.md  ARCHITECTURE_2026-01-18.md  ARCHITECTURE_SIMPLIFICATION.md  DEPLOYMENT_STRATEGY.md  IMPLEMENTED.md  IMPLEMENTED.md_2026-01-18_16-00-00  IMPLEMENTED_20260118_231512.md  ISSUE-41-RESOLUTION.md  MACOS_BUILD_INSTRUCTIONS.md  QA.md  REVIEW.md  TDD_METHODOLOGY.md  architecture.md  complete-auto-fix-system.md  crash_investigation_final_report.md  crash_investigation_issue.md  integration-test-system-setup.md  interactive-auto-fix-system.md  issue_001_settings_crash.md  motion-classifier-design.md  motion-classifier-threshold-tuning.md  opencv-compatibility.md  opencv_implementation_report.md  performance-testing-architecture.md  performance-testing-guide.md  performance-testing-implementation.md  phase3-completion-report.md  plugin-load-issue.md  plugin-loading-fix-report.md  plugin-loading-troubleshooting-complete.md  ui-architecture.md
include/: obs-data.h  obs-frontend-api.h  obs_minimal.h
reviews/: REVIEW.md
scripts/: bundle_opencv.sh  cleanup-build-artifacts.sh  consolidate-temp-files.sh  crash-test-framework.sh  fix-bundled-plugin.sh  fix-plugin-loading.sh  plugin-manager.sh  plugin-test-orchestrator.sh  plugin-version-builder.sh  quick-perf.sh  quick-test.sh  run-integration-test.sh  run-perf-benchmark.sh  run-perf-regression.sh  run-perftest.sh  run-tests.sh  run-ui-test.sh  test-core-only.sh  (+1 more)
src/tests/: CMakeLists.txt  test_basic_functionality.cpp  test_exception_safety.cpp  test_exception_safety_complete.cpp  test_exception_safety_isolated.cpp  test_stabilizer_core.cpp
tests/: CMakeLists.txt  debug_visual_quality.cpp  integration-test.cpp  test-compile.cpp  test-core-only.cpp  test-ui-implementation.cpp  test_adaptive_integration.cpp  test_adaptive_stabilizer.cpp  test_algorithm_edge_cases.cpp  test_basic.cpp  test_basic_functionality.cpp  test_code_level_optimization.cpp  test_constants.hpp  test_core_functionality.cpp  test_data_generator.cpp  test_data_generator.hpp  test_edge_cases.cpp  test_extended_edge_cases.cpp  test_feature_detection.cpp  test_feature_tracking.cpp  test_format_specific.cpp  test_frame_utils.cpp  test_integration.cpp  test_main.cpp  test_memory_leaks.cpp  test_mocks.hpp  test_motion_classifier.cpp  test_multi_source.cpp  test_neon_feature_detection.cpp  test_obs_integration.cpp  test_performance_benchmarks.cpp  test_performance_monitoring.cpp  test_performance_thresholds.cpp  test_preset_manager.cpp  test_resource_management.cpp  test_stabilizer_core.cpp  test_stabilizer_core_comprehensive.cpp  test_thread_safety.cpp  test_transform_smoothing.cpp  test_video_processing.cpp  (+2 more)
tests/build-tests/: CMakeCache.txt
tests/integration/: README.md  README_ja.md  auto_fix.py  auto_fix_enhanced.py  run_auto_fix_loop.sh  run_integration_tests.sh  test_00_preflight.sh  test_01_build.sh  test_02_plugin_loading.sh  test_03_basic_functionality.sh  test_04_crash_detection.sh  test_99_cleanup.sh
tests/integration/fix_patterns/: fix_basic_functionality.sh  fix_build.sh  fix_crash.sh  fix_plugin_loading.sh  fix_preflight.sh
tests/integration/results/: results_20260115_045437.json  results_20260115_050331.json  results_20260115_050341.json  results_20260115_050351.json  results_20260115_050401.json  results_20260115_050412.json  results_20260115_050422.json  results_20260115_050433.json  results_20260115_050443.json  results_20260115_050453.json  results_20260115_050504.json  results_20260115_050515.json  results_20260115_050525.json  results_20260115_050536.json  results_20260115_050546.json  results_20260115_050557.json  results_20260115_050607.json  results_20260115_050618.json  results_20260115_050628.json  results_20260115_050651.json  results_20260115_050701.json  results_20260115_050711.json  results_20260115_050722.json  results_20260115_050732.json  results_20260115_050743.json  results_20260115_050753.json  results_20260115_050804.json  results_20260115_050952.json  results_20260115_051002.json  results_20260115_051013.json  results_20260115_051023.json  results_20260115_051033.json  results_20260115_051044.json  results_20260115_051054.json  results_20260115_051105.json  results_20260115_051115.json  results_20260115_051126.json  results_20260115_051136.json  results_20260115_051147.json  results_20260115_051157.json  (+18 more)
tests/legacy/: test_stabilizer_core_new.cpp
tmp/full-plugin-build/: CMakeLists.txt
tmp/full-plugin-build/obs-stabilizer-full.plugin/Contents/: Info.plist
tmp/full-plugin-build/obs-stabilizer-full.plugin/Contents/MacOS/: test-stabilizer
tmp/full-plugin-build/test-stabilizer.plugin/Contents/MacOS/: test-stabilizer
tmp/minimal-build/: CMakeLists.txt
tmp/minimal-build/obs-stabilizer-minimal.plugin/Contents/: Info.plist
tmp/minimal-build/obs-stabilizer-minimal.plugin/Contents/MacOS/: obs-stabilizer-minimal
tmp/no-opencv-test/: CMakeLists.txt  test-app
(+290 files in other folders)
